Edit: Fix flashing space when overflow-y

--- a/src/shared/components/ChatContainer/ChatWindow/styles.module.css
+++ b/src/shared/components/ChatContainer/ChatWindow/styles.module.css
@@ -27,7 +27,7 @@
 
 .chatContext {
     width: 100%;
-    height: calc(100% - 110px);
+    height: calc(100% - 130px);
     flex: 1;
     display: flex;
     flex-direction: column;
